<resources>
    <string name="app_name">Apollo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_log_in">Log In</string>
    <string name="action_create_account">Create Account</string>
    <string name="referral_code">Referral Code(Optional)</string>

    <string name="button_quit">Quit</string>
    <string name="login_details">Practice Speaking with Native English Speakers</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>

    <string name="action_settings">Settings</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="practice_english">Practice English</string>
    <string name="title_activity_sign_up">Sign Up</string>

    Practice English

</resources>
