<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textColorHint="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:backgroundTint="#c8afff"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:backgroundTint="#c8afff" />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="010-0000-0000"
        android:maxLines="1"
        android:ems="10"
        android:inputType="phone"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:backgroundTint="#c8afff" />

    <EditText
        android:id="@+id/referral"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/referral_code"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:backgroundTint="#c8afff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#F0c8afff"
            android:text="@string/action_create_account"
            android:textColor="#844dff"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
